# hal_nuvoton

./: CMakeLists.txt
dts/m031x/: sys.h  sys_reg.h
dts/pinctrl/: m031-pinctrl.h
m031x/: CMakeLists.txt
m031x/Devices/M031/Include/: M031Series.h  pwm_reg.h
m031x/StdDriver/: CMakeLists.txt
m031x/StdDriver/inc/: clk.h  fmc.h  gpio.h  spi.h  uart.h
m031x/StdDriver/src/: clk.c  gpio.c
m46x/StdDriver/: CMakeLists.txt
m46x/StdDriver/drv_emac/: synopGMAC_plat.h
m46x/StdDriver/src/: clk.c  fmc.c  retarget.c
